--- a/src/components/Main/Modal/modal.module.scss
+++ b/src/components/Main/Modal/modal.module.scss
@@ -5,37 +5,63 @@
 
 .bg {
   display: flex;
+  z-index: 9999;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
   align-items: center;
   justify-content: center;
-  width: 100vw;
-  height: 100vh;
   backdrop-filter: blur(2px);
 }
 .modalActive {
   @include flexbox.flexbox(center, center);
+  width: 300px;
+  height: 600px;
+  flex-direction: column;
   background-color: colors.$GRAYD;
   color: colors.$BACKGROUND_COLOR;
   border-radius: 8px;
-  width: 300px;
-  height: 200px;
   padding: 10px;
+
+  .btn {
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin-left: 250px;
+    margin-top: 10px;
+  }
   .area {
     @include flexbox.flexbox(center, center);
-    flex-direction: column;
-    .info {
-      text-align: center;
-      height: 50px;
-      overflow: auto;
-    }
-    .btn {
-      border: 2px solid colors.$SEARCH_BAR;
-      width: 80%;
-      height: 30px;
-      margin-top: 5px;
+    height: 590px;
+    .station {
+      @include flexbox.flexbox(center, center);
+      flex-direction: row;
+      height: 80px;
+      margin-bottom: 400px;
+      .circle {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        border: 15px solid colors.$BLUE;
+        background-color: colors.$WHITE;
+        text-align: center;
+        position: absolute;
+        .info {
+          text-align: center;
+          overflow: auto;
+          font-weight: 900;
+          font-size: 20px;
+        }
+      }
+      .line {
+        width: 130px;
+        border: 15px solid colors.$BLUE;
+        background-color: colors.$BLUE;
+      }
     }
   }
 }
