--- a/src/components/Main/Subway/subway.module.scss
+++ b/src/components/Main/Subway/subway.module.scss
@@ -1,8 +1,9 @@
-.selected {
+.image {
   display: block;
   width: 1650px;
   height: 1325px;
 }
-.unSelected {
-  display: none;
+
+area {
+  cursor: pointer;
 }
