feat:css 호선마다 색상 변경

--- a/src/components/Main/Modal/modal.module.scss
+++ b/src/components/Main/Modal/modal.module.scss
@@ -46,7 +46,7 @@
         width: 80px;
         height: 80px;
         border-radius: 50%;
-        border: 15px solid colors.$BLUE;
+        border: 20px solid;
         background-color: colors.$WHITE;
         text-align: center;
         position: absolute;
@@ -61,7 +61,6 @@
         width: 160px;
         height: 40px;
         border: none;
-        background-color: colors.$BLUE;
       }
     }
   }
