--- a/src/components/Map/mapContainer.module.scss
+++ b/src/components/Map/mapContainer.module.scss
@@ -1,6 +1,11 @@
 .map {
-  height: 80vh;
+  display: none;
+}
+.listResult {
+  height: 350px;
+  width: 250px;
+}
+.list {
+  height: 100%;
   width: 100%;
-  // height: 100%;
-  // width: 100%;
 }
