--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,15 @@
 @use '/src/styles/mixins/flexbox';
 @use '/src/styles/constants/colors';
 
-.title {
-  font-size: 30px;
-  padding: 10px;
-  margin: 10px;
-}
 .header {
-  @include flexbox.flexbox(center, center);
+  @include flexbox.flexbox(around, center);
+  width: 100%;
+  flex-direction: column;
+  padding-bottom: 50px;
+  .title {
+    font-size: 30px;
+    padding: 10px;
+    margin: 10px;
+    color: colors.$GRAY2;
+  }
 }
