--- a/src/components/Header/DropDown/DropDown.module.scss
+++ b/src/components/Header/DropDown/DropDown.module.scss
@@ -1,50 +1,45 @@
 @use '/src/styles/mixins/flexbox';
 @use '/src/styles/constants/colors';
 
-h1 {
-  font-size: 30px;
-  padding: 10px;
-  margin: 10px;
-}
-
 .dropDown {
-  @include flexbox.flexbox(center, center);
+  @include flexbox.flexbox(around, end);
+  width: 200px;
   flex-direction: column;
-  width: 20rem;
   background-color: transparent;
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 .dropDownBtn {
-  background-color: transparent;
-  border: solid 2px colors.$GRAYA;
-  width: 20rem;
-  height: 2rem;
-  margin-bottom: 2px;
+  @include flexbox.flexbox(around, center);
+  width: 200px;
+  height: 45px;
+  box-sizing: border-box;
+  background: colors.$WHITE;
+  border: 1px solid colors.$GRAY6;
+  border-radius: 10px;
 }
-.select {
+.selected {
+  width: 200px;
+  height: 80px;
+  overflow: scroll;
   color: colors.$BLACK;
+  border: none;
+  background-color: transparent;
+
+  .dropBtn {
+    width: 200px;
+    height: 35px;
+    margin-bottom: 2px;
+    text-decoration: none;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+  }
+  .dropBtn:hover {
+    background-color: colors.$GRAYA;
+  }
 }
 .hidden {
   display: none;
-}
-ul {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  background-color: transparent;
-  border: solid colors.$GRAYA;
-  overflow: auto;
-  height: 100px;
-  width: 20rem;
-}
-.dropBtn {
-  text-decoration: none;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-}
-.dropBtn:hover {
-  background-color: colors.$GRAYA;
-}
-.searcher {
-  padding-left: 30px;
 }
