feat: 모바일 화면

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -2,5 +2,7 @@
 @use '/src/styles/constants/colors';
 
 .bg {
-  // background-color: colors.$YELLOW;
+  @include flexbox.flexbox(start, center);
+  flex-direction: column;
+  height: 100vh;
 }
