--- a/src/components/Header/DropDown/DropDown.module.scss
+++ b/src/components/Header/DropDown/DropDown.module.scss
@@ -1,14 +1,25 @@
 @use '/src/styles/mixins/flexbox';
 @use '/src/styles/constants/colors';
-
+.selected::-webkit-scrollbar {
+  width: 10px;
+  height: 0;
+}
+.selected::-webkit-scrollbar-thumb {
+  background-color: colors.$GRAY3;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+.selected::-webkit-scrollbar-track {
+  background-color: colors.$GRAYA;
+  border-radius: 10px;
+  box-shadow: inset 0px 0px 5px colors.$GRAYD;
+}
 .dropDown {
   @include flexbox.flexbox(around, end);
   width: 200px;
   flex-direction: column;
   background-color: transparent;
-  ::-webkit-scrollbar {
-    display: none;
-  }
 }
 .dropDownBtn {
   @include flexbox.flexbox(around, center);
@@ -22,7 +33,7 @@
 .selected {
   width: 200px;
   height: 80px;
-  overflow: scroll;
+  overflow: auto;
   color: colors.$BLACK;
   border: none;
   background-color: transparent;
