feat:모바일 검색

--- a/src/components/Main/Modal/modal.module.scss
+++ b/src/components/Main/Modal/modal.module.scss
@@ -26,7 +26,7 @@
   color: colors.$GRAY2;
   border-radius: 8px;
   padding: 10px;
-
+  box-shadow: 0 17px 20px -18px rgba(0, 0, 0, 1);
   .btn {
     width: 20px;
     height: 20px;
