--- a/src/components/Header/DropDown/DropDown.module.scss
+++ b/src/components/Header/DropDown/DropDown.module.scss
@@ -27,7 +27,7 @@
   height: 45px;
   box-sizing: border-box;
   background: colors.$WHITE;
-  border: 1px solid colors.$GRAY6;
+  border: 1px solid colors.$GRAYD;
   border-radius: 10px;
 }
 .selected {
